<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >



    <LinearLayout
        android:id="@+id/llProfileName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:layout_marginRight="10dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Pawan"
            />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/llProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:layout_marginRight="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvProfileEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="pawankumarbaranwal@gmail.com"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llProfileMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:layout_marginRight="10dp"
                android:text="@string/mobile_number"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvProfileMobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="9902765235"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llProfileDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:layout_marginRight="10dp"
                android:text="@string/profile_date_of_birth"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvProfiledateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="30/07/1991"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfileSOSName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:layout_marginRight="10dp"
                android:text="@string/name_of_contact_person"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvProfileSOSName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Nadeem"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llProfileSOSPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/phone_of_contact_person"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvProfileSOSPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="9090765434"
                />
        </LinearLayout>







    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/llProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

</LinearLayout>