<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.android.com.chalrahi.AutoBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <Button
                android:id="@+id/btnBookAnAuto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:background="@drawable/oval_background_red"
                android:padding="3dp"
                android:text="@string/book_an_auto"></Button>

            <Button
                android:textColor="#FFFFFF"
                android:id="@+id/btnSendAnAlert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oval_background_black"
                android:padding="3dp"
                android:text="@string/send_an_alert"></Button>
        </LinearLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="10dp"
                android:gravity="center|left"
                android:text="@string/click_on_red_box"
                 />
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                >
            <TextView
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/click_on_black_box"
                android:padding="10sp" />
        </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
